--- a/portfolio.html
+++ b/portfolio.html
@@ -5,22 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li>
-          <a href="">Студія</a>
-        </li>
-        <li>
-          <a href="">Портфоліо</a>
-        </li>
-        <li>
-          <a href="">Контакти</a>
-        </li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li>
+            <a href="">Студія</a>
+          </li>
+          <li>
+            <a href="">Портфоліо</a>
+          </li>
+          <li>
+            <a href="">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <nav class="filters">
+        <button type="button">Все</button>
+        <button type="button">Веб-сайти</button>
+        <button type="button">Додатки</button>
+        <button type="button">Дизайн</button>
+        <button type="button">Маркетинг</button>
+      </nav>
+      <section></section>
+    </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
