add style end class

--- a/index.html
+++ b/index.html
@@ -14,38 +14,40 @@
     />
   </head>
   <body>
-    <header class="header">
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="main_header">
+      <nav class="main-nav">
+        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <ul class="list">
           <li>
-            <a href="">Студія</a>
+            <a class="current link" href="">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
         <h2>Особливості</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
@@ -75,9 +77,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="">
         <h2>Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/box1.jpg"
@@ -103,7 +105,7 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img8.jpg"
@@ -140,19 +142,23 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
+      <a class="link" href="./index.html" class="logo"
+        >Web<span>Studio</span></a
+      >
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/oCiPM6kaKYDTQ4pn9"
+            <a class="link" href="https://goo.gl/maps/oCiPM6kaKYDTQ4pn9"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
