--- a/portfolio.html
+++ b/portfolio.html
@@ -14,46 +14,109 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="main_header">
+      <nav class="main-nav">
+        <a href="./index.html" class="logo link">Web<span>Studio</span></a>
+        <ul class="list">
           <li>
-            <a href="">Студія</a>
+            <a class="link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a class="current link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
+      <ul class="list">
+        <li>
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
-      <nav class="filters">
-        <button type="button">Все</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Додатки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
-      </nav>
-      <section></section>
-    </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
+      <section>
+        <h1>Портфоліо</h1>
+        <nav class="filters">
+          <button type="button">Все</button>
+          <button type="button">Веб-сайти</button>
+          <button type="button">Додатки</button>
+          <button type="button">Дизайн</button>
+          <button type="button">Маркетинг</button>
+        </nav>
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/oCiPM6kaKYDTQ4pn9"
+            <img src="./images/portfolio/portfjlio-1.jpg" alt="" />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-2.jpg" alt="" />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-3.jpg" alt="" />
+            <h2>Ресторан Seafood</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-4.jpg" alt="" />
+            <h2>Проєкт Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-5.jpg" alt="" />
+            <h2>Проєкт Boxes</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-6.jpg" alt="" />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-7.jpg" alt="" />
+            <h2>Видання Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-8.jpg" alt="" />
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/portfjlio-9.jpg" alt="" />
+            <h2>Growing Business</h2>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <a class="link" href="./index.html" class="logo"
+        >Web<span>Studio</span></a
+      >
+      <address>
+        <ul class="list">
+          <li>
+            <a class="link" href="https://goo.gl/maps/oCiPM6kaKYDTQ4pn9"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
