--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/imga.jpg"
+              src="./images/box1.jpg"
               alt="Розробка сайтів"
               width="370"
               height="294"
@@ -89,7 +89,7 @@
           </li>
           <li>
             <img
-              src="./images/imgb.jpg"
+              src="./images/box2.jpg"
               alt="Створення мобільних версій сайтів"
               width="370"
               height="294"
@@ -97,7 +97,7 @@
           </li>
           <li>
             <img
-              src="./images/imgc.jpg"
+              src="./images/box3.jpg"
               alt="Розробка дизайну"
               width="370"
               height="294"
@@ -111,7 +111,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/our-team/ihor.jpg"
+              src="./images/img8.jpg"
               alt="Ігор Дем'яненко"
               width="270"
               height="260"
@@ -121,7 +121,7 @@
           </li>
           <li>
             <img
-              src="./images/our-team/olga.jpg"
+              src="./images/img9.jpg"
               alt="Ольга Рєпіна"
               width="270"
               height="260"
@@ -131,7 +131,7 @@
           </li>
           <li>
             <img
-              src="./images/our-team/mykola.jpg"
+              src="./images/img10.jpg"
               alt="Микола Тарасов"
               width="270"
               height="260"
@@ -141,7 +141,7 @@
           </li>
           <li>
             <img
-              src="./images/our-team/mykhailo.jpg"
+              src="./images/img11.jpg"
               alt="Михайло Єрмаков"
               width="270"
               height="260"
