--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button class="button hero" type="button">Замовити послугу</button>
+        <button class="button-hero" type="button">Замовити послугу</button>
       </section>
 
       <section class="features">
