--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <section>
-        <h1 class="portfolio hero-title">Портфоліо</h1>
+        <h1 class="portfolio-hero-title">Портфоліо</h1>
         <ul class="list">
           <li>
             <button class="btn-filters current" type="button">Усі</button>
